# coral-complexity2

./: .gitignore  CHANGELOG.md  FINAL_PACKAGE_STRUCTURE.md  README.md  VALIDATION_REPORT.md  pyproject.toml  run_real_ply_test_temp.py  setup.py  test_functionality.py
.github/workflows/: ci.yml
coral-geometry/: README.md  geometric_measures.py
examples/: comprehensive_demo.py  process_real_data.py
raw/mesh3d/: README.md
raw/shading/: README.md  calculate_shading.py
shading/: README.md  calculate_shading.py  requirements.txt
src/coral_complexity_metrics/: __init__.py  _version.py
src/coral_complexity_metrics/mesh/: __init__.py  _dimension_order.py  _face.py  _helpers.py  _mesh.py  _mesh_io.py  _metric.py  _quadrat.py  _quadrat_builder.py  _quadrilateral.py  _utils.py  complexity_metrics.py  geometric_measures.py  mesh_utils.py  mesh_validator.py  quadrat_metrics.py  shading.py  shading_modules.py  shapefile_processor.py  unified_metrics.py
src/coral_complexity_metrics/mesh/_internal/: __init__.py
src/coral_complexity_metrics/utils/: __init__.py  crop_mesh.py
src/coral_complexity_metrics/validation/: __init__.py  shading_validator.py
src/coral_complexity_metrics/visualization/: __init__.py  mesh_previews.py
tests/: test_enhanced_functionality.py  test_geometric_measures.py  test_quadrat_metrics.py  test_shading.py
tests/sample_data/: colony_plot.ply
